# tantivy-py

./: .gitignore  .readthedocs.yaml  .travis.yml  4.0  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Pipfile  README.md  justfile  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  rust-toolchain  rustfmt.toml  setup.py  tox.ini
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  publish.yaml  python.yaml  scorecard.yml  scorecards.yml
ci/: deploy.sh  deploy_mac.sh
docs/: about.md  explanation.md  gen_api.py  howto.md  index.md  reference.md  requirements.txt  tutorials.md
docs/api/: index.md  search.js  tantivy.md
docs/api/tantivy/: query_parser_error.md  tantivy.md
docs/pdoc-template/: frame.html.jinja2  overrides.css  pdoc_hook.py
src/: directory.rs  document.rs  explanation.rs  extra_tokenizer.rs  facet.rs  field.rs  filters.rs  geocoding.rs  index.rs  lib.rs  lindera_tokenizer.rs  more_collectors.rs  parser_error.rs  query.rs  query_grammar.rs  schema.rs  schemabuilder.rs  searcher.rs  searcher_frame_document.rs  snippet.rs  term.rs  tokenizer.rs
src/filters/: filter_constants.rs  outer_punctuation_filter.rs  possessive_contraction_filter.rs
tantivy/: __init__.py  tantivy.pyi
tests/: conftest.py  sherlock.txt  tantivy_kapiche_test.py  tantivy_test.py  tantivy_test_kapiche.py  test_directory.py  test_docs.py  test_document_scoring.py  test_escapes.py  test_jieba.py  test_json_bug.py  test_lindera.py  test_stat_collector.py  test_tokenizers.py
tests/test_index/: .managed.json  meta.json
