[package]
name = "tantivy"
version = "0.22.2"
readme = "README.md"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2021"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.24.2" # should be the same version as dependencies.pyo3

[dependencies]
base64 = "0.22"
chrono = "0.4.40"
tantivy = "0.24.0"
itertools = "0.14.0"
futures = "0.3.31"
pythonize = "0.24.0" # should be compatible with dependencies.pyo3
serde = "1.0"
serde_json = "1.0.140"

[dependencies.pyo3]
version = "0.24.2" # should be the same version as pyo3-build-config
features = ["chrono", "extension-module"]
