[package]
name = "tantivy"
version = "0.25.0"
readme = "README.md"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2021"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.26.0"

[dependencies]
base64 = "0.22"
chrono = "0.4.42"
tantivy = "0.25.0"
itertools = "0.14.0"
futures = "0.3.31"
pythonize = "0.26.0"
serde = "1.0"
serde_json = "1.0.143"

[dependencies.pyo3]
version = "0.26.0"
features = ["chrono", "extension-module"]
