[build-system]
requires = ["maturin<=1.3.2"]
build-backend = "maturin"

[project]
name = "tantivy"
version = "0.22.2"
description = "Official Python bindings for the Tantivy search engine"
requires-python = ">=3.9"
authors = [
    { name = "Damir Jelić", email="poljar@termina.org.uk" },
    { name = "Caleb Hattingh", email = "code@cjrh.info" },
    { name = "Cam Parry", email = "cam.parry@kapiche.com"}
]
optional-dependencies = { dev = ["nox"] }

[tool.maturin]
bindings = "pyo3"

[tool.pytest.ini_options]
# Set the durations option and doctest modules
# See https://docs.pytest.org/en/latest/usage.html#durations
addopts = "--doctest-modules --durations=10"
# Use the `--ignore-glob` setting to exclude the `noxfile.py` module from the doctests
# See https://docs.pytest.org/en/latest/reference.html#confval-ignore_glob
testpaths = [
    "tests",
    "tantivy",
    "src",
]
